--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
@@ -22,6 +23,7 @@
     "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.4",
+    "prisma": "^5.17.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
